--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,24 @@
 body {
     margin: 0;
-    background: cornsilk;
+    background: navy;
     text-align: center;
+    font-family: sans-serif;
+}
+.navbar {
+    width: 85%;
+    margin: auto;
+    padding: 35 px 0;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.navbar ul li{
+    list-type: none;
+    display: inline-block;
+    margin: 0 20px
+}
+.navbar ul li a{
+    text-decoration: none;
+    color: white;
+    text-transform: uppercase;
 }
